styles/form.css
:root {
    --primary: #FFB732;
    --secondary: #1A2933;
    --mainwhite: #f3f3f3;
    --header-font: "Montserrat", sans-serif;
    --paragraph-font: 'Poppins', sans-serif;
    /* --h1-size: 128px;
    --h3-size: 75px;
    --p-size: 32px; */
}

/* General Styles */
html,
body {
    height: 100%;
    margin: 0;
    font-family: var(--paragraph-font);
    background-color: #f9f9f9;
    color: #333;
    display: flex;
    flex-direction: column;
}

h1 {
    font-family: var(--header-font);
    font-weight: bold;
    margin: 0;
    font-size: 25px;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0;
}

header {
    background-color: var(--secondary);
    color: #fff;
    padding: 10px;
    text-align: center;
    width: 100%;
    max-width: 400px;
    margin-bottom: 0.5em;
    border-radius: 8px 8px 0 0;
}


form,
section {
    background-color: #fff;
    padding: 0.75em;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 100%;
    max-width: 400px;
}

fieldset {
    margin-bottom: 1em;
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 0.4em;
}

.rating {
    display: flex;
}

.rating label {
    margin-right: 8px;
    padding: 0;
}

legend {
    font-weight: bold;
    color: #4b0055;
}

label {
    display: flex;
    align-items: center;
    margin-bottom: 0.5em;
}

.date {
    display: flex;
    flex-direction: column;
    align-items: start;
}

input[type="text"],
input[type="date"],
select,
textarea {
    width: 100%;
    padding: 1px;
    margin: 0;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 1rem;
}

input[type="checkbox"],
input[type="radio"] {
    margin-right: 0.5em;
}

input[type="submit"],
button {
    background-color: var(--primary);
    color: #fff;
    padding: 0.5em;
    margin: 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 1rem;
    width: 100%;
    max-width: 400px;
}

input[type="submit"]:hover,
button:hover {
    background-color: var(--secondary);
}

footer {
    background-color: var(--secondary);
    color: #fff;
    text-align: center;
    padding: 0.7em;
    width: 100%;
    max-width: 400px;
    margin-top: 0.5em;
    border-radius: 0 0 8px 8px;
}

@media (max-width: 768px) {
    main {
        padding: 0.5em;
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin: auto;
    }
}

